# Copyright (C) 2017-2023 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

	- Allow description of REF/ALT values in SV input files with lowercase ACGT
	- Update of the .gitignore file 
	- Add bug fix to report only a subset of the annotation columns provided by AnnotSV 
	- Add of warning messages for the ranking (in case of missing required annotations)
	- Update the display of the default command line

April, 14, 2023, AnnotSV version 3.3.5
	- Add documentation on the "-includeCI" option
	- Add bugfix for variantconvert use in GRCh38 (when setting the REF in the VCF output file)
	- Add bugfix during the install (depending on the environment)

April, 07, 2023, AnnotSV version 3.3.4
	- Among the “po_P_*_*” features, redundancy is now removed ONLY from “po_P_*_phen” and “po_P_*_hpo”.
	=> AnnotSV keeps now the correspondence between “po_P_*_source”, “po_P_*_coord” and “po_P_*_percent” features.
	- Improvment of the running time (code part: SV partially overlapping with an established benign region)
	- Update of the Makefile (variantconvert install)
	- Remove requirement for ANNOTSV environment variable
	- Add of the "INSTALL_code.sh" and "INSTALL_annotations.sh" bash files (for a basic manual installation)
	- Add a check of the "#CHROM" header line
	- Add of the "-variantconvertDir" option (path of the variantconvert directory). By default, the variantconvert tool distributed by annotSV is used.

March, 30, 2023, AnnotSV version 3.3.3
	- Add bugfix for large input file

March, 28, 2023, AnnotSV version 3.3.2
	- Add bugfix for SV partially overlapping with an established benign region. Ranking Impact
	- Improve the 40 criteria (Loss) in the SV ranking